# data-triathlon

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  Taskfile.yml  docker-compose.yml  render.yaml
backend/: CLAUDE.md  Dockerfile  README.md  alembic.ini  bc_pagination_check.py  database.py  extract_xlsx_urls.py  generate_test_fixtures.py  main.py  models.py  pyproject.toml  reliability_check.py  requirements-dev.txt  requirements.txt  ruff.toml
backend-v2/: README.md  (+4 more)
backend/alembic/: env.py
backend/alembic/versions/: 723259e01cdd_add_participation_is_relay.py  b2c3d4e5f6a7_course_identity_is_relay.py  c3d4e5f6a7b8_course_quality_index.py  e4211f35a275_initial_schema.py
backend/app/: cli.py  cli_reporters.py  main.py
backend/app/api/: deps.py
backend/app/cli/: __init__.py  __main__.py  reports.py  url_sources.py  validators.py
backend/app/core/: club.py  config.py  database.py  exceptions.py  logging.py  season.py  time.py
backend/app/models/: __init__.py  course.py
backend/app/repositories/: athlete_repository.py  course_repository.py  participation_repository.py
backend/app/schemas/: course.py  scrape.py  season.py
backend/routers/: admin.py  results.py  scrape.py  stats.py
backend/scrapers/: __init__.py  base.py  breizhchrono.py  klikego.py  prolivesport.py  sportinnovation.py  timepulse.py  utils.py  wiclax.py
backend/scripts/: audit.py  audit_scrapers.py  repair_courses.py  reset_db.py  seed_demo.py
backend/tests/: conftest.py  test_api.py  test_breizhchrono.py  test_cli.py  test_cli_reporters.py  test_config.py  test_health.py  test_integration.py  test_integration_scrapers.py  test_klikego.py  test_migrations.py  test_prolivesport.py  test_raceresult.py  test_registry.py  test_scrapers_utils.py  test_sportinnovation.py  test_timepulse.py  test_utils.py  test_wiclax.py
(+437 files in other folders)
